test for valid data passed

--- a/assign3-triangle/TriangleTests/TriangleTests.csproj
+++ b/assign3-triangle/TriangleTests/TriangleTests.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>fc68fa44-d5d3-4833-bfcf-b088514f3b2f</ProjectGuid>
+    <ProjectGuid>{59BAD43C-47D6-419F-96AB-C7DBBA6F2E7D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>TriangleTests</RootNamespace>
@@ -50,8 +50,14 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="myTriangleTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\assign3-triangle\assign3-triangle.csproj">
+      <Project>{07db6129-8224-4988-86f7-d8833720f6ad}</Project>
+      <Name>assign3-triangle</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
