--- a/assign3-triangle/assign3-triangle/assign3-triangle.csproj
+++ b/assign3-triangle/assign3-triangle/assign3-triangle.csproj
@@ -44,11 +44,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="InvalidSideException.cs" />
+    <Compile Include="Triangle.cs" />
+    <Compile Include="TriangleUI.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="TriangleUI.Designer.cs">
+      <DependentUpon>TriangleUI.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
